--- a/about.html
+++ b/about.html
@@ -33,23 +33,21 @@
                 <span class="bar"></span>
             </div>
         </nav>
-
-        <div class="about-container">
-            <h1>About Us</h1>
-        </div>
     </header>
 
-    <div class="container">
-        <div class="content">
-            <h2>Our Story</h2>
-            <p>Welcome to our company! We are dedicated to providing the best service to our customers.</p>
-            
-            <h2>Our Team</h2>
-            <div id="team-container"></div>
+
+<div class="page-wrapper">
+      <h1>About Me</h1>
+            <p>I’m a designer living in Columbia South Carolina. I have over 10 years of experience in the design industry. I started out as a graphic designer, but realized that I loved web design. I love seeing people use my designs, versus looking at them.
+              I am currently employed by Red Ventures working as a Senior Product esigner, but work on freelance projects on the side. If you have a project you would like to start, and like my work, send me a message! I would love to help you with your design needs.</p>
+  
             
             <button id="load-more">Load More</button>
-        </div>
-    </div>
+  
+  </div>
+
+
+
 
     <script src="script.js"></script>
     <script src="wc-nav-component.js"></script>
