--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#process">Process</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#linkedin"><img src="Images/LinkedIn-Icon.svg" alt="Hero Image"></a></li>
+                <li><a href="https://www.linkedin.com/in/grantcrowder/"><img src="Images/LinkedIn-Icon.svg" alt="Hero Image"></a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -59,7 +59,7 @@
           <a href="#" class="cta-button">View Project</a>
         </div>
         <div class="project-image">
-          <img src="Images/Nike-page-re-design.jpg" alt="Amex Design System">
+          <img loading=”lazy” src="Images/Nike-page-re-design.jpg" alt="Amex Design System">
         </div>
       </section>
 
@@ -71,7 +71,7 @@
           <a href="#" class="cta-button">View Project</a>
         </div>
         <div class="project-image">
-          <img src="/Images/Nike-page-re-design.jpg" alt="Project Name">
+          <img loading=”lazy” src="Images/Nike-page-re-design.jpg" alt="Project Name">
         </div>
       </section>
 
@@ -83,7 +83,7 @@
           <a href="#" class="cta-button">View Project</a>
         </div>
         <div class="project-image">
-          <img src="project-image.jpg" alt="Project Name">
+          <img loading=”lazy” src="Images/Nike-page-re-design.jpg" alt="Project Name">
         </div>
       </section>
 
@@ -95,7 +95,7 @@
           <a href="#" class="cta-button">View Project</a>
         </div>
         <div class="project-image">
-          <img src="project-image.jpg" alt="Project Name">
+          <img loading=”lazy” src="Images/Nike-page-re-design.jpg" alt="Project Name">
         </div>
       </section> 
     </section>
