--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
         * {
             margin: 0;
@@ -14,7 +15,7 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Funnel Display', sans-serif;
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             display: flex;
             justify-content: center;
@@ -56,11 +57,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">🚀</div>
-        <h1>Coming Soon</h1>
+        <img src="Images/stacked-vertical.png" height="120px">
+        <h1 style="padding-top: 1.5rem;color:#000;">Coming Soon</h1>
         <p class="subtitle">
             My portfolio is currently under construction. I'm working hard to create something amazing. 
-            Stay tuned for an incredible showcase of my work!
+            Stay tuned for a new site coming. 
         </p>
     </div>
 </body>
