--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1 style="padding-top: 1.5rem;color:#000;">Coming Soon</h1>
         <p class="subtitle">
             My portfolio is currently under construction. I'm working hard to create something amazing. 
-            Stay tuned for a new site coming. 
+            Stay tuned. 
         </p>
     </div>
 </body>
