coming soon page update
coming soon page update

--- a/index-final.html
+++ b/index-final.html
@@ -64,10 +64,10 @@
 
       <section class="project-showcase">
         <div class="project-info">
-          <h2 class="project-name">Project Name</h2>
-          <p class="project-year">2024</p>
+          <h2 class="project-name">Hilton Subdomain Refresh</h2>
+          <p class="project-year">2021</p>
           <p class="project-role">Lead Designer</p>
-          <a href="#" class="cta-button">View Project <img style="padding-left:0.5rem;" src="Images/arrow.svg"></a>
+          <a href="hilton-subdomain.html" class="cta-button">View Project <img style="padding-left:0.5rem;" src="Images/arrow.svg"></a>
         </div>
         <div class="project-image">
           <img loading=”lazy” src="Images/design-system-test.jpg" alt="Project Name">
