--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .container {
             background: white;
             border-radius: 15px;
-            padding: 50px;
+            padding: 3rem;
             box-shadow: 0 15px 35px rgba(0,0,0,0.1);
             max-width: 600px;
             width: 100%;
@@ -49,17 +49,21 @@
         }
 
         .subtitle {
-            color: #7f8c8d;
-            font-size: 1.1rem;
-            margin-bottom: 30px;
-            line-height: 1.6;
+            color: #595e5f;
+            font-size: 1rem;
+            margin-bottom: 2rem;
+            line-height: 1.5;
+        }
+
+        img {
+            height: 5.5rem;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="Images/stacked-vertical.png" height="120px">
-        <h1 style="padding-top: 1.5rem;color:#000;">Coming Soon</h1>
+        <img src="Images/gc-mark.png">
+        <h1 style="padding-top: 1.5rem;color:#333;">Coming Soon</h1>
         <p class="subtitle">
             My portfolio is currently under construction. I'm working hard to create something amazing. 
             Stay tuned. 
