--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         img {
             height: 5.5rem;
         }
+
+        .linkedin {
+            height: 24px;
+        }
     </style>
 </head>
 <body>
@@ -68,6 +72,12 @@
             My portfolio is currently under construction. I'm working hard to create something amazing. 
             Stay tuned. 
         </p>
+        <div style="display: flex;align-items: center; justify-content: center; gap: 1rem; color:#595e5f; width:100%;">
+        <p style="line-break: anywhere;">grantcrowderdesign@gmail.com</p>
+        <div style="width:1px; height: 24px;px; background-color:#D4DCEA;"></div>
+        <a style="display:flex;" href="https://www.linkedin.com/in/grantcrowder/"><img class="linkedin" src="Images/linkedin.svg"></a>
+
+        </div>
     </div>
 </body>
 </html>
