--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
         <div style="display: flex;align-items: center; justify-content: center; gap: 1rem; color:#595e5f; width:100%;">
         <p style="line-break: anywhere;">grantcrowderdesign@gmail.com</p>
-        <div style="width:1px; height: 24px;px; background-color:#D4DCEA;"></div>
+        <div style="width:1px; height: 24px; background-color:#D4DCEA;"></div>
         <a style="display:flex;" href="https://www.linkedin.com/in/grantcrowder/"><img class="linkedin" src="Images/linkedin.svg"></a>
 
         </div>
