--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             background-color:#D4DCEA;"
         }
 
+
+       
+
+
+
        /* Media Queries */
 @media (max-width: 600px) {
 
@@ -96,14 +101,19 @@ img {
 
 .contact-divider {
 
-    display: none;
+ /*   display: none; */
 
+}
+
+.email {
+    font-size: .9rem;
 }
 
 
 .contact-info-container{
-    flex-direction: column;
+  /*  flex-direction: column; */
 
+}
 }
     </style>
 </head>
@@ -116,11 +126,14 @@ img {
             Stay tuned. 
         </p>
         <div class="contact-info-container">
-        <p style="line-break: anywhere;">grantcrowderdesign@gmail.com</p>
+        <p class="email"><span class="email-address">grantcrowderdesign<wbr>@gmail.com</span></p>
         <div class="contact-divider"></div>
         <a style="display:flex;" href="https://www.linkedin.com/in/grantcrowder/"><img class="linkedin" src="Images/linkedin.svg"></a>
 
         </div>
     </div>
+
+
+    </script>
 </body>
 </html>
