--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
             justify-content: center; 
             gap: 1rem; 
             color:#595e5f; 
-            width:100%;"
+            width:100%;
         }
 
         .contact-divider {
             width:1px; 
             height: 24px; 
-            background-color:#D4DCEA;"
+            background-color:#D4DCEA;
         }
 
 
@@ -100,22 +100,10 @@ h1 {
 img {
             height: 3.5rem;
         }
-
-.contact-divider {
-
- /*   display: none; */
-
-}
-
 .email {
     font-size: .9rem;
 }
 
-
-.contact-info-container{
-  /*  flex-direction: column; */
-
-}
 }
     </style>
 </head>
