--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
         body {
             font-family: 'Funnel Display', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            /* background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
+            background-image: url("Images/patrick-hendry-ZZvw_vInavA-unsplash.jpg");
+            background-size: cover;
+            background-position: center, top;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
@@ -29,12 +32,14 @@
         }
 
         .container {
-            background: white;
+            background: #f1f1f1;
             border-radius: 15px;
             padding: 3rem;
             box-shadow: 0 15px 35px rgba(0,0,0,0.1);
             max-width: 600px;
             width: 100%;
+            border: 1px solid #e6ecf9;
+
         }
 
         .logo {
