image size optimized

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         body {
             font-family: 'Funnel Display', sans-serif;
             /* background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
-            background-image: url("Images/patrick-hendry-ZZvw_vInavA-unsplash.jpg");
+            background-image: url("Images/1440w-default.jpg");
             background-size: cover;
             background-position: center, top;
             justify-content: center;
