--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         .container {
-            background: #f1f1f1;
+            background: #fff;
             border-radius: 15px;
             padding: 3rem;
             box-shadow: 0 15px 35px rgba(0,0,0,0.1);
