updated with bankrate data center

--- a/index-final.html
+++ b/index-final.html
@@ -42,8 +42,9 @@
     <h2 class="h2-center-aligned">Top case studies</h2>
     <p>Here are some of my current and most recent projects.</p>
       <section class="project-grid">
-        <a href="bankrate-data-center.html"><project-tile
-            image="https://via.placeholder.com/1280x720"
+        <a style="text-decoration: none;"
+          href="bankrate-data-center.html"><project-tile
+            image="Images/bankrate-data-center-hero.jpg"
             year="2024"
             title="Bankrate Data Center"
             description="Description of Project 1. This is a sample project to demonstrate the responsive layout."
