--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <button id="load-more">Load More</button>
             </div>
             <div class="content-right">
-                <img src="Images/me-2.jpg" class="about-img" alt="Grant Crowder">
+                <img src="Images/family.jpg" class="about-img" alt="Grant Crowder">
             </div>
       </div>
     </div>
